[package]
authors = ["Joonas Koivunen <joonas@equilibrium.co>"]
description = "UnixFs tree support"
edition = "2018"
license = "MIT OR Apache-2.0"
name = "ipfs-unixfs"
readme = "README.md"
repository = "https://github.com/rs-ipfs/rust-ipfs"
version = "0.0.1"

[features]
default = ["std"]
std = []
with-filetime = ["filetime"]

[dependencies]
cid = { git = "https://github.com/whalelephant/rust-cid", branch = "nstd", default-features = false }
either = { default-features = false, version = "1.5" }
filetime = { optional = true, version = "0.2.12" }
multihash = { git = "https://github.com/whalelephant/rust-multihash", branch = "nstd", default-features = false }
quick-protobuf = { default-features = false, version = "0.7" }
sha2 = { default-features = false, version = "0.9" }

[dev-dependencies]
hex-literal = { default-features = false, version = "0.3" }
libc = { default-features = false, version = "0.2.71" }
multibase = { git = "https://github.com/whalelephant/rust-multibase", branch = "nstd", default-features = false }
